# aoc2025

./: .gitignore  CMakeLists.txt  README.md
include/: aoc2025.hpp
scripts/: gen.sh
src/: aoc2025_1.cpp  aoc2025_10.cpp  aoc2025_11.cpp  aoc2025_12.cpp  aoc2025_2.cpp  aoc2025_3.cpp  aoc2025_4.cpp  aoc2025_5.cpp  aoc2025_6.cpp  aoc2025_7.cpp  aoc2025_8.cpp  aoc2025_9.cpp
