cmake_minimum_required(VERSION 3.30)
set(PROJECT_YEAR 2025)
project(AOC${PROJECT_YEAR} CXX)

string(TIMESTAMP DAY %d)
string(TIMESTAMP YEAR %Y)

find_package(Boost REQUIRED COMPONENTS log)

set(CMAKE_CXX_STANDARD 23)
set(AOC${PROJECT_YEAR}_DAY_MAX 12)
# Temporary until clang adds support for modules
if(CMAKE_CXX_COMPILER_ID STREQUAL GNU)
    set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
endif()
if(${MONTH} NOT EQUAL 12)
    set(DAY 0)
elseif(${YEAR} GREATER ${PROJECT_YEAR} OR ${DAY} GREATER AOC${PROJECT_YEAR}_DAY_MAX)
    set(DAY AOC${PROJECT_YEAR}_DAY_MAX)
endif()
foreach(i RANGE 1 ${DAY})
    if(IS_READABLE ${CMAKE_CURRENT_SOURCE_DIR}/src/aoc${PROJECT_YEAR}_${i}.cpp)
        add_executable(aoc${PROJECT_YEAR}_${i} src/aoc${PROJECT_YEAR}_${i}.cpp)
        target_include_directories(aoc${PROJECT_YEAR}_${i} PRIVATE include)
        target_compile_definitions(aoc${PROJECT_YEAR}_${i} PRIVATE AOC${PROJECT_YEAR}_DAY=${i})
        target_link_libraries(aoc${PROJECT_YEAR}_${i} PUBLIC Boost::log)
    endif()
endforeach()
